# django-starter-project

./: .dockerignore  .editorconfig  .env.example  .gitignore  .jsbeautifyrc  Dockerfile  Dockerfile-web  Dockerfile-webpack  Dockerfile-worker  Dockerfile.web  Dockerfile.webpack  Dockerfile.worker  LICENSE.txt  Pipfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  scripts.py  setup.cfg  webpack.config.js
apps/misc/: choices.py  context_processors.py  hello_universe_urls.py  models.py  tasks.py
apps/misc/management/commands/: celery_autoreload.py  test_celery.py
apps/misc/templates/misc/: hello_universe.html
apps/users/: __init__.py  admin.py  apps.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py  0002_registrationprofile.py
apps/users/urls/: auth.py
assets/: .eslintrc.json  .stylelintrc.json  index.js  package-lock.json  package.json  webpack.config.js
assets/js/: main.js
assets/sass/: _typography.sass  _variables.sass  main.sass
assets/scss/: _colors.scss  _reset.scss  _structure.scss  _typography.scss  _variables.scss  main.scss
conf/: admin.py  apps.py  celery.py  settings.py  urls.py  wsgi.py
templates/: 403.html  404.html  500.html  base.html  error_base.html
templates/registration/: activate.html  activation_complete.html  activation_complete_admin_pending.html  activation_email.txt  admin_approve.html  admin_approve_complete.html  admin_approve_email.html  base.html  logged_out.html  login.html  logout.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  registration_closed.html  registration_complete.html  registration_form.html  resend_activation_complete.html  resend_activation_form.html
tests/: test_int.py
tests/misc/: test_choices.py
